# ludwig

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  SECURITY.md  create_project.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
.spyproject/config/: workspace.ini
docs/: DESKTOP_GUIDE.md  EMBEDDED_GUIDE.md  GETTING_STARTED.md  README.md  WEB_GUIDE.md  ai.md  api.md  getting-started.md  index.html  iot.md  web.md
examples/: README.md  alarm_example.py  api_example.py  robot_car.py  smart_home.py  todo_api.py  vision_example.py
landing/: docs.html  examples.html
ludwig/: __init__.py  cli.py  core.py  db.py  web.py
ludwig/ai/: __init__.py  assistant.py  automator.py  vision.py
ludwig/iot/: __init__.py  actuators.py  alarm.py  camera.py  garden.py  home.py  pin.py  robot.py  sensor.py
templates/: README.md  alarm_example.py  api_example.py  assistant_example.py  chatbot_example.py  dashboard_example.py  door_lock.py  garden_example.py  led_controller.py  weather_station.py
tests/: test_cli.py  test_core.py  test_db.py  test_iot.py
